// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQLOptionsService should create gql options 1`] = `
Array [
  GraphQLSchema {
    "__allowedLegacyNames": Array [],
    "__validationErrors": undefined,
    "_directives": Array [
      "@skip",
      "@include",
      "@deprecated",
    ],
    "_implementations": Object {
      "Node": Array [
        "Site",
        "Customer",
        "Transaction",
      ],
    },
    "_mutationType": "Mutation",
    "_possibleTypeMap": undefined,
    "_queryType": "Query",
    "_subscriptionType": null,
    "_typeMap": Object {
      "Attribute": "Attribute",
      "AttributeInput": "AttributeInput",
      "AuthTokens": "AuthTokens",
      "Boolean": "Boolean",
      "CarWashOption": "CarWashOption",
      "CompletedResultEnum": "CompletedResultEnum",
      "Customer": "Customer",
      "CustomerInput": "CustomerInput",
      "CustomerOTPPayload": "CustomerOTPPayload",
      "CustomerOTPRequest": "CustomerOTPRequest",
      "Date": "Date",
      "DateTime": "DateTime",
      "Decimal": "Decimal",
      "Float": "Float",
      "FuelProduct": "FuelProduct",
      "ID": "ID",
      "Int": "Int",
      "LoyaltyLevelEnum": "LoyaltyLevelEnum",
      "Mutation": "Mutation",
      "Node": "Node",
      "OTP": "OTP",
      "OTPChannel": "OTPChannel",
      "OTPMode": "OTPMode",
      "PageInfo": "PageInfo",
      "PaymentLevelEnum": "PaymentLevelEnum",
      "PaymentLocationEnum": "PaymentLocationEnum",
      "PaymentMethod": "PaymentMethod",
      "ProcessingStateEnum": "ProcessingStateEnum",
      "Pump": "Pump",
      "PumpStatusEnum": "PumpStatusEnum",
      "Query": "Query",
      "Receipt": "Receipt",
      "SaleItem": "SaleItem",
      "ServiceLevelEnum": "ServiceLevelEnum",
      "Site": "Site",
      "SiteStatusEnum": "SiteStatusEnum",
      "String": "String",
      "Time": "Time",
      "Tokens": "Tokens",
      "Transaction": "Transaction",
      "TransactionBeginAtPumpInput": "TransactionBeginAtPumpInput",
      "TransactionConnection": "TransactionConnection",
      "TransactionEdge": "TransactionEdge",
      "TransactionFilter": "TransactionFilter",
      "__Directive": "__Directive",
      "__DirectiveLocation": "__DirectiveLocation",
      "__EnumValue": "__EnumValue",
      "__Field": "__Field",
      "__InputValue": "__InputValue",
      "__Schema": "__Schema",
      "__Type": "__Type",
      "__TypeKind": "__TypeKind",
    },
    "astNode": Object {
      "directives": Array [],
      "kind": "SchemaDefinition",
      "operationTypes": Array [
        Object {
          "kind": "OperationTypeDefinition",
          "operation": "query",
          "type": Object {
            "kind": "NamedType",
            "name": Object {
              "kind": "Name",
              "value": "Query",
            },
          },
        },
        Object {
          "kind": "OperationTypeDefinition",
          "operation": "mutation",
          "type": Object {
            "kind": "NamedType",
            "name": Object {
              "kind": "Name",
              "value": "Mutation",
            },
          },
        },
      ],
    },
    "extensionASTNodes": Array [],
  },
]
`;

exports[`GraphQLOptionsService should create gql options 2`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": Array [],
  "_directives": Array [
    "@include",
    "@skip",
    "@deprecated",
  ],
  "_implementations": Object {
    "CustomerOTPPayloadOrAuthTokens": Array [],
    "Node": Array [
      "Customer",
      "Transaction",
      "Site",
    ],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": undefined,
  "_queryType": "Query",
  "_subscriptionType": null,
  "_typeMap": Object {
    "AccessTokenByRefreshTokenInput": "AccessTokenByRefreshTokenInput",
    "AccessTokenByRefreshTokenInputType": "AccessTokenByRefreshTokenInputType",
    "AddPowercardFunds": "AddPowercardFunds",
    "Address": "Address",
    "AttractionChip": "AttractionChip",
    "Attribute": "Attribute",
    "AttributeInput": "AttributeInput",
    "AuthChallenge": "AuthChallenge",
    "AuthChallengeType": "AuthChallengeType",
    "AuthPayloadType": "AuthPayloadType",
    "AuthTokens": "AuthTokens",
    "Boolean": "Boolean",
    "Brand": "Brand",
    "BrandAgreement": "BrandAgreement",
    "BrandFilter": "BrandFilter",
    "CUSTOMER_REQUEST_TYPE": "CUSTOMER_REQUEST_TYPE",
    "CUSTOMER_STATUS": "CUSTOMER_STATUS",
    "CarWashOption": "CarWashOption",
    "CheckIntoLocation": "CheckIntoLocation",
    "ClientToken": "ClientToken",
    "CompletedResultEnum": "CompletedResultEnum",
    "Customer": "Customer",
    "CustomerAgreement": "CustomerAgreement",
    "CustomerContact": "CustomerContact",
    "CustomerCreate": "CustomerCreate",
    "CustomerCreateAddress": "CustomerCreateAddress",
    "CustomerCreateDemographics": "CustomerCreateDemographics",
    "CustomerCreatePersonName": "CustomerCreatePersonName",
    "CustomerCreatePhoneNumber": "CustomerCreatePhoneNumber",
    "CustomerCreateVerify": "CustomerCreateVerify",
    "CustomerDevice": "CustomerDevice",
    "CustomerDeviceCreate": "CustomerDeviceCreate",
    "CustomerDeviceFilter": "CustomerDeviceFilter",
    "CustomerDeviceUpdate": "CustomerDeviceUpdate",
    "CustomerFeedback": "CustomerFeedback",
    "CustomerInput": "CustomerInput",
    "CustomerLoginAttempt": "CustomerLoginAttempt",
    "CustomerLoginAttemptConnection": "CustomerLoginAttemptConnection",
    "CustomerLoginAttemptEdge": "CustomerLoginAttemptEdge",
    "CustomerLoginAttemptFilter": "CustomerLoginAttemptFilter",
    "CustomerLoyaltyInstrumentCreate": "CustomerLoyaltyInstrumentCreate",
    "CustomerLoyaltyInstrumentUpdate": "CustomerLoyaltyInstrumentUpdate",
    "CustomerOTPPayload": "CustomerOTPPayload",
    "CustomerOTPPayloadOrAuthTokens": "CustomerOTPPayloadOrAuthTokens",
    "CustomerOTPRequest": "CustomerOTPRequest",
    "CustomerOTPVerify": "CustomerOTPVerify",
    "CustomerPassword": "CustomerPassword",
    "CustomerPasswordChange": "CustomerPasswordChange",
    "CustomerPasswordCredentials": "CustomerPasswordCredentials",
    "CustomerPasswordReset": "CustomerPasswordReset",
    "CustomerPasswordResetByOTPVerify": "CustomerPasswordResetByOTPVerify",
    "CustomerPasswordResetPaymentInstrumentVerify": "CustomerPasswordResetPaymentInstrumentVerify",
    "CustomerPasswordSet": "CustomerPasswordSet",
    "CustomerPaymentInstrumentCreate": "CustomerPaymentInstrumentCreate",
    "CustomerPaymentInstrumentUpdate": "CustomerPaymentInstrumentUpdate",
    "CustomerPaymentInstrumentVerify": "CustomerPaymentInstrumentVerify",
    "CustomerPinCode": "CustomerPinCode",
    "CustomerPinCodeChange": "CustomerPinCodeChange",
    "CustomerPinCodeCredentials": "CustomerPinCodeCredentials",
    "CustomerPinCodeSet": "CustomerPinCodeSet",
    "CustomerPinCodeVerify": "CustomerPinCodeVerify",
    "CustomerUpdate": "CustomerUpdate",
    "CustomerUpdateAddress": "CustomerUpdateAddress",
    "CustomerUpdateDemographics": "CustomerUpdateDemographics",
    "CustomerUpdatePersonName": "CustomerUpdatePersonName",
    "CustomerUpdatePhoneNumber": "CustomerUpdatePhoneNumber",
    "CustomerUsername": "CustomerUsername",
    "Date": "Date",
    "DateTime": "DateTime",
    "Decimal": "Decimal",
    "Demographics": "Demographics",
    "FUEL_PUMP_STATUS": "FUEL_PUMP_STATUS",
    "Float": "Float",
    "FuelProduct": "FuelProduct",
    "FuelReceipt": "FuelReceipt",
    "GeoLocation": "GeoLocation",
    "GeoLocationFilter": "GeoLocationFilter",
    "HARDWARE_VENDOR": "HARDWARE_VENDOR",
    "HoursOfOperation": "HoursOfOperation",
    "ID": "ID",
    "Int": "Int",
    "JSON": "JSON",
    "LOCATION_RESOURCE_STATUS": "LOCATION_RESOURCE_STATUS",
    "LOCATION_RESOURCE_TYPE": "LOCATION_RESOURCE_TYPE",
    "LOYALTY_INSTRUMENT_STATUS": "LOYALTY_INSTRUMENT_STATUS",
    "LOYALTY_LEVEL": "LOYALTY_LEVEL",
    "Location": "Location",
    "LocationAttribute": "LocationAttribute",
    "LocationAttributeFilter": "LocationAttributeFilter",
    "LocationConnection": "LocationConnection",
    "LocationEdge": "LocationEdge",
    "LocationFilter": "LocationFilter",
    "LocationResource": "LocationResource",
    "LocationResourceFilter": "LocationResourceFilter",
    "LoyaltyInstrument": "LoyaltyInstrument",
    "LoyaltyInstrumentFilter": "LoyaltyInstrumentFilter",
    "LoyaltyLevelEnum": "LoyaltyLevelEnum",
    "Mutation": "Mutation",
    "NewAttractionChip": "NewAttractionChip",
    "NewGeoLocation": "NewGeoLocation",
    "NewPowercard": "NewPowercard",
    "NewPowercardImage": "NewPowercardImage",
    "NewVirtualPowercard": "NewVirtualPowercard",
    "Node": "Node",
    "OTP": "OTP",
    "OTPChannel": "OTPChannel",
    "OTPMode": "OTPMode",
    "OTP_CHANNEL": "OTP_CHANNEL",
    "OTP_MODE": "OTP_MODE",
    "OpenCommerceFeature": "OpenCommerceFeature",
    "OpenCommerceFeatureFilter": "OpenCommerceFeatureFilter",
    "OtpInput": "OtpInput",
    "PAYMENT_INSTRUMENT_STATUS": "PAYMENT_INSTRUMENT_STATUS",
    "PAYMENT_INSTRUMENT_TYPE": "PAYMENT_INSTRUMENT_TYPE",
    "PAYMENT_LEVEL": "PAYMENT_LEVEL",
    "PHONE_TYPE": "PHONE_TYPE",
    "POWERCARD_CARD_TYPE": "POWERCARD_CARD_TYPE",
    "POWERCARD_STATUS_TYPE": "POWERCARD_STATUS_TYPE",
    "PageInfo": "PageInfo",
    "PaymentInstrument": "PaymentInstrument",
    "PaymentLevelEnum": "PaymentLevelEnum",
    "PaymentLocationEnum": "PaymentLocationEnum",
    "PaymentMethod": "PaymentMethod",
    "PersonName": "PersonName",
    "PhoneNumber": "PhoneNumber",
    "Powercard": "Powercard",
    "PowercardFilter": "PowercardFilter",
    "PowercardImage": "PowercardImage",
    "PowercardImageFilter": "PowercardImageFilter",
    "ProcessingStateEnum": "ProcessingStateEnum",
    "Pump": "Pump",
    "PumpStatusEnum": "PumpStatusEnum",
    "Query": "Query",
    "RESOURCE_ITEM_TYPE": "RESOURCE_ITEM_TYPE",
    "RateCard": "RateCard",
    "Receipt": "Receipt",
    "ReceiptLine": "ReceiptLine",
    "ResourceItem": "ResourceItem",
    "ResourceItemConnection": "ResourceItemConnection",
    "ResourceItemEdge": "ResourceItemEdge",
    "ResourceItemFilter": "ResourceItemFilter",
    "ResourceItemPrice": "ResourceItemPrice",
    "Response": "Response",
    "STAC": "STAC",
    "SaleItem": "SaleItem",
    "ServiceLevelEnum": "ServiceLevelEnum",
    "SignUpInput": "SignUpInput",
    "Site": "Site",
    "SiteStatusEnum": "SiteStatusEnum",
    "StartTransaction": "StartTransaction",
    "String": "String",
    "TRANSACTION_STATUS": "TRANSACTION_STATUS",
    "TRANSACTION_TYPE": "TRANSACTION_TYPE",
    "Tenant": "Tenant",
    "Time": "Time",
    "Tokens": "Tokens",
    "Transaction": "Transaction",
    "TransactionBeginAtPumpInput": "TransactionBeginAtPumpInput",
    "TransactionConnection": "TransactionConnection",
    "TransactionEdge": "TransactionEdge",
    "TransactionFilter": "TransactionFilter",
    "TransactionPaymentInfo": "TransactionPaymentInfo",
    "TransactionPaymentInfoFilter": "TransactionPaymentInfoFilter",
    "UpdateGeoLocation": "UpdateGeoLocation",
    "UpdatePowercardAttributes": "UpdatePowercardAttributes",
    "UserAttributes": "UserAttributes",
    "UserLoginInput": "UserLoginInput",
    "WEEKDAY": "WEEKDAY",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
  "transforms": Array [
    FilterRootFields {
      "transformer": TransformRootFields {
        "transform": [Function],
      },
    },
  ],
}
`;
